# EasyController3

./: .gitignore  LICENSE  README.md  picoFlashTool.ps1
board/: BOM.xlsx  main.brd  main.sch
code/: CMakeLists.txt  easycontroller.c
docs/: getting-started.md
matlab/: analyze_log.m  log.txt
